base/vaultwarden/service.yml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: vaultwarden
  labels:
    app: vaultwarden
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: vaultwarden
  type: ClusterIP
