base/vaultwarden/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  rules:
    - host: vaultwarden.127.0.0.1.nip.io
      http:
        paths:
          - backend:
              service:
                name: vaultwarden
                port:
                  number: 80
            pathType: ImplementationSpecific
            path: ''
